--- a/index.html
+++ b/index.html
@@ -901,55 +901,117 @@
                 <button class="modal-close" id="movimentacao-modal-close">&times;</button>
             </div>
             <div class="modal-body">
-                <div class="info-box">
-                    Registre entradas e saídas de objetos do armário sempre que ocorrer qualquer movimentação.
+                <div class="mov-modal-hero">
+                    <div class="mov-hero-copy">
+                        <p class="eyebrow">Organize a guarda de volumes</p>
+                        <h3>Movimentações do armário</h3>
+                        <p class="helper-text">Registre entradas, saídas ou conferências sempre que houver movimentação de pertences.</p>
+                    </div>
+                    <div class="mov-hero-hints">
+                        <div class="mov-hero-hint">
+                            <i class="fas fa-clipboard-check" aria-hidden="true"></i>
+                            <div>
+                                <strong>Transparência</strong>
+                                <p>A linha do tempo mostra quem registrou cada ação e quando.</p>
+                            </div>
+                        </div>
+                        <div class="mov-hero-hint">
+                            <i class="fas fa-box-open" aria-hidden="true"></i>
+                            <div>
+                                <strong>Controle dos itens</strong>
+                                <p>Use os volumes existentes como referência antes de autorizar saídas.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="mov-itens-resumo" id="mov-itens-resumo">
-                    <div class="mov-itens-resumo-header">Itens registrados no armário</div>
-                    <div class="mov-itens-resumo-body" id="mov-itens-resumo-body">Carregando itens...</div>
+                <div class="mov-modal-grid">
+                    <section class="mov-card">
+                        <header class="mov-card-header">
+                            <div>
+                                <p class="eyebrow">Registrar nova movimentação</p>
+                                <h4>Dados principais</h4>
+                                <p class="helper-text">Preencha o tipo, descreva o que ocorreu e detalhe os volumes movimentados.</p>
+                            </div>
+                        </header>
+                        <div class="mov-card-body">
+                            <form id="movimentacao-form">
+                                <div class="form-group">
+                                    <label for="mov-tipo">Tipo de movimentação</label>
+                                    <select id="mov-tipo" class="form-control" required>
+                                        <option value="">Selecione</option>
+                                        <option value="entrada">Entrada de pertences</option>
+                                        <option value="saida">Saída de pertences</option>
+                                        <option value="conferencia">Conferência</option>
+                                    </select>
+                                </div>
+                                <div class="form-group">
+                                    <label for="mov-descricao">Descrição</label>
+                                    <textarea id="mov-descricao" class="form-control" rows="3" required placeholder="Descreva brevemente o que ocorreu"></textarea>
+                                </div>
+                                <div class="form-group">
+                                    <div class="form-group-header">
+                                        <label>Itens desta movimentação</label>
+                                        <span class="pill">Listagem obrigatória</span>
+                                    </div>
+                                    <div class="helper-text">Prefira reaproveitar os volumes cadastrados na abertura ou em entradas anteriores para manter a rastreabilidade.</div>
+                                    <div class="movimentacao-itens-list" id="mov-itens-list"></div>
+                                    <div class="form-inline-actions">
+                                        <button type="button" class="btn btn-secondary" id="mov-add-item">Adicionar item não cadastrado</button>
+                                        <button type="button" class="btn btn-ghost" id="mov-preencher-itens">Preencher com itens registrados</button>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label>Responsável pelo registro</label>
+                                    <div class="form-static highlight" id="mov-responsavel-info">Será preenchido automaticamente com seu usuário.</div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="form-group">
+                                        <label for="mov-data">Data</label>
+                                        <input type="date" id="mov-data" class="form-control" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="mov-hora">Hora</label>
+                                        <input type="time" id="mov-hora" class="form-control" required>
+                                    </div>
+                                </div>
+                                <div class="form-actions align-start">
+                                    <button type="submit" class="btn btn-primary">Adicionar movimentação</button>
+                                </div>
+                            </form>
+                        </div>
+                    </section>
+                    <aside class="mov-card-stack">
+                        <div class="mov-card">
+                            <header class="mov-card-header">
+                                <div>
+                                    <p class="eyebrow">Inventário atual</p>
+                                    <h4>Itens registrados no armário</h4>
+                                </div>
+                            </header>
+                            <div class="mov-card-body">
+                                <div class="info-box info-compact">
+                                    Consulte o inventário consolidado antes de registrar saídas ou conferências.
+                                </div>
+                                <div class="mov-itens-resumo" id="mov-itens-resumo">
+                                    <div class="mov-itens-resumo-header">Itens registrados no armário</div>
+                                    <div class="mov-itens-resumo-body" id="mov-itens-resumo-body">Carregando itens...</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mov-card">
+                            <header class="mov-card-header">
+                                <div>
+                                    <p class="eyebrow">Linha do tempo</p>
+                                    <h4>Histórico de movimentações</h4>
+                                    <p class="helper-text">Acompanhe todas as entradas, saídas e conferências deste armário.</p>
+                                </div>
+                            </header>
+                            <div class="mov-card-body">
+                                <div class="movimentacoes-list" id="movimentacoes-list"></div>
+                            </div>
+                        </div>
+                    </aside>
                 </div>
-                <div class="movimentacoes-list" id="movimentacoes-list"></div>
-                <form id="movimentacao-form">
-                    <div class="form-group">
-                        <label for="mov-tipo">Tipo de movimentação</label>
-                        <select id="mov-tipo" class="form-control" required>
-                            <option value="">Selecione</option>
-                            <option value="entrada">Entrada de pertences</option>
-                            <option value="saida">Saída de pertences</option>
-                            <option value="conferencia">Conferência</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="mov-descricao">Descrição</label>
-                        <textarea id="mov-descricao" class="form-control" rows="3" required placeholder="Descreva brevemente o que ocorreu"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label>Itens desta movimentação</label>
-                        <div class="helper-text">Use os volumes cadastrados na abertura e nas entradas anteriores como referência para saídas ou conferências.</div>
-                        <div class="movimentacao-itens-list" id="mov-itens-list"></div>
-                        <div class="form-inline-actions">
-                            <button type="button" class="btn btn-secondary" id="mov-add-item">Adicionar item não cadastrado</button>
-                            <button type="button" class="btn btn-ghost" id="mov-preencher-itens">Preencher com itens registrados</button>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label>Responsável pelo registro</label>
-                        <div class="form-static" id="mov-responsavel-info">Será preenchido automaticamente com seu usuário.</div>
-                    </div>
-                    <div class="form-group" style="display:flex; gap:12px;">
-                        <div style="flex:1;">
-                            <label for="mov-data">Data</label>
-                            <input type="date" id="mov-data" class="form-control" required>
-                        </div>
-                        <div style="flex:1;">
-                            <label for="mov-hora">Hora</label>
-                            <input type="time" id="mov-hora" class="form-control" required>
-                        </div>
-                    </div>
-                    <div class="form-actions" style="justify-content:flex-start;">
-                        <button type="submit" class="btn btn-primary">Adicionar movimentação</button>
-                    </div>
-                </form>
             </div>
         </div>
     </div>
