--- a/style.html
+++ b/style.html
@@ -2506,6 +2506,108 @@
             border: 1px dashed color-mix(in srgb, var(--primary-color) 45%, transparent);
         }
         /* Movimentações */
+        .mov-modal-hero {
+            display: grid;
+            grid-template-columns: 1.1fr 1fr;
+            gap: 16px;
+            padding: 18px;
+            border: 1px solid color-mix(in srgb, var(--primary-color) 18%, transparent);
+            border-radius: 14px;
+            background: color-mix(in srgb, var(--primary-color) 12%, var(--light-color) 88%);
+            margin-bottom: 16px;
+        }
+        .mov-hero-copy h3 {
+            margin: 4px 0 8px;
+            color: var(--primary-color);
+        }
+        .mov-hero-hints {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 10px;
+        }
+        .mov-hero-hint {
+            display: flex;
+            gap: 12px;
+            background: rgba(255, 255, 255, 0.6);
+            border: 1px solid color-mix(in srgb, var(--primary-color) 20%, transparent);
+            border-radius: 12px;
+            padding: 12px 14px;
+            color: var(--text-color);
+        }
+        .mov-hero-hint i {
+            color: var(--primary-color);
+            font-size: 1.1rem;
+        }
+        .mov-modal-grid {
+            display: grid;
+            grid-template-columns: 1.05fr 0.95fr;
+            gap: 16px;
+        }
+        .mov-card {
+            background: var(--surface-color);
+            border: 1px solid color-mix(in srgb, var(--border-color) 70%, transparent);
+            border-radius: 14px;
+            padding: 16px;
+            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.04);
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+        .mov-card-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            gap: 12px;
+        }
+        .mov-card-header h4 {
+            margin: 2px 0 4px;
+        }
+        .mov-card-body {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+        .mov-card-stack {
+            display: flex;
+            flex-direction: column;
+            gap: 14px;
+        }
+        .form-row {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+            gap: 12px;
+        }
+        .form-group-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 10px;
+        }
+        .pill {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            padding: 6px 10px;
+            border-radius: 20px;
+            background: color-mix(in srgb, var(--primary-color) 16%, transparent);
+            color: color-mix(in srgb, var(--primary-color) 90%, black 10%);
+            font-size: 0.85rem;
+            font-weight: 600;
+        }
+        .form-actions.align-start {
+            justify-content: flex-start;
+        }
+        .form-static.highlight {
+            background: color-mix(in srgb, var(--primary-color) 8%, transparent);
+            border: 1px dashed color-mix(in srgb, var(--primary-color) 35%, transparent);
+            border-radius: 10px;
+            padding: 10px 12px;
+            color: color-mix(in srgb, var(--text-color) 90%, black 10%);
+        }
+        .info-box.info-compact {
+            margin-top: 0;
+            font-size: 0.9rem;
+        }
         .movimentacoes-list {
             display: flex;
             flex-direction: column;
@@ -2513,10 +2615,11 @@
             margin-bottom: 20px;
         }
         .movimentacao-item {
-            border: 1px dashed color-mix(in srgb, var(--primary-color) 30%, transparent);
+            border: 1px solid color-mix(in srgb, var(--border-color) 70%, transparent);
             border-radius: 12px;
             padding: 12px 14px;
-            background: color-mix(in srgb, var(--primary-color) 10%, transparent);
+            background: color-mix(in srgb, var(--surface-color) 90%, white 10%);
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4);
         }
         .movimentacao-header {
             display: flex;
@@ -2573,6 +2676,19 @@
         }
         .movimentacao-item-row button {
             margin-left: 6px;
+        }
+        @media (max-width: 1024px) {
+            .mov-modal-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+        @media (max-width: 860px) {
+            .mov-modal-hero {
+                grid-template-columns: 1fr;
+            }
+            .mov-hero-hints {
+                grid-template-columns: 1fr;
+            }
         }
         .form-inline-actions {
             display: flex;
