Ensure prontuario is saved when applying termos

--- a/script.html
+++ b/script.html
@@ -6283,6 +6283,7 @@
                     id: identificadores.idPlanilha,
                     nomeVisitante: dadosTermo.acompanhante,
                     nomePaciente: dadosTermo.paciente,
+                    prontuario: dadosTermo.prontuario,
                     leito: dadosTermo.leito,
                     whatsapp: termoCadastroArmario.whatsapp || ''
                 };
