--- a/style.html
+++ b/style.html
@@ -1920,19 +1920,21 @@
             min-width: min(520px, 92vw);
             background: #ffffff;
             border-radius: 16px;
-            padding: 22px 24px 18px;
+            padding: 28px 26px 20px;
             border: 1px solid #e2e8f0;
             box-shadow: 0 20px 40px rgba(15, 23, 42, 0.16);
             color: #0a0a0a;
-            font-weight: 850;
+            font-weight: 600;
             position: relative;
             overflow: hidden;
+            line-height: 1.45;
+            font-size: 15px;
         }
         .print-ticket *,
         .print-ticket *::before,
         .print-ticket *::after {
             color: #0a0a0a;
-            font-weight: 850;
+            font-weight: 600;
         }
         .print-ticket::before {
             content: '';
@@ -1947,120 +1949,124 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 10px;
+            gap: 12px;
             text-align: center;
-            margin-bottom: 6px;
+            margin-bottom: 10px;
         }
         .print-badge {
             display: inline-flex;
             align-items: center;
-            gap: 6px;
-            padding: 6px 10px;
+            gap: 8px;
+            padding: 8px 12px;
             border-radius: 999px;
             border: 1px solid #0f172a;
-            font-weight: 700;
+            font-weight: 800;
             letter-spacing: 0.05em;
             text-transform: uppercase;
-            font-size: 0.92rem;
+            font-size: 0.98rem;
         }
         .print-ticket-body {
             display: flex;
             flex-direction: column;
-            gap: 14px;
-            padding: 12px 12px 10px;
+            gap: 16px;
+            padding: 12px 8px 12px;
         }
-        .print-highlight-block {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 8px;
-            padding: 14px 12px;
+        .print-section {
+            border: 1px solid #e2e8f0;
             border-radius: 12px;
             background: #f8fafc;
-            border: 1px solid #e2e8f0;
+            padding: 14px 14px 12px;
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
         }
-        .print-highlight-block.armario {
-            align-items: flex-start;
-        }
-        .print-highlight-block.patient {
+        .print-section:nth-of-type(2) {
             background: #eef2ff;
             border-color: #c7d2fe;
         }
-        .print-highlight-label {
-            font-size: 1.4rem;
-            font-weight: 850;
-            letter-spacing: 0.08em;
+        .print-section-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+        .print-section-title {
+            font-size: 1.05rem;
+            font-weight: 800;
+            letter-spacing: 0.06em;
             text-transform: uppercase;
             color: #0f172a;
         }
-        .print-armario-row {
-            display: flex;
-            align-items: center;
+        .print-identificacao-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
             gap: 12px;
-            width: 100%;
         }
-        .print-armario-wrapper {
-            display: flex;
-            align-items: center;
-        }
-        .print-armario-large {
-            font-size: 8rem;
-            font-weight: 900;
-            letter-spacing: 0.16em;
-            color: #0f172a;
-            text-align: center;
-            line-height: 1;
-        }
-        .print-paciente-large {
-            font-size: 3rem;
-            font-weight: 850;
-            color: #0f172a;
-            text-align: center;
-            line-height: 1.25;
-        }
-        .print-details {
+        .print-field {
             display: flex;
             flex-direction: column;
-            gap: 12px;
+            gap: 6px;
+            padding: 10px 12px;
+            border-radius: 10px;
+            border: 1px dashed #cbd5e1;
+            background: #fff;
+        }
+        .print-field-armario {
+            border-color: #0f172a;
+            background: #0f172a;
+            color: #fff;
+        }
+        .print-field-armario * {
+            color: #fff;
+        }
+        .print-field-label {
+            font-size: 0.95rem;
+            letter-spacing: 0.07em;
+            text-transform: uppercase;
+            font-weight: 750;
+        }
+        .print-armario-large {
+            font-size: 4.75rem;
+            font-weight: 900;
+            letter-spacing: 0.12em;
+            color: #fff;
+            text-align: left;
+            line-height: 1.05;
+        }
+        .print-paciente-large {
+            font-size: 2.8rem;
+            font-weight: 850;
+            color: #0f172a;
+            text-align: left;
+            line-height: 1.2;
+        }
+        .print-section-rows {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
         .print-row {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            gap: 12px;
+            display: grid;
+            grid-template-columns: minmax(120px, 160px) 1fr;
+            align-items: center;
+            gap: 10px;
+            padding: 8px 10px;
+            background: #fff;
+            border-radius: 8px;
+            border: 1px dashed #d5dbe6;
         }
-        .print-row span {
-            font-size: 1.1rem;
-            letter-spacing: 0.05em;
+        .print-row-label {
+            font-size: 1rem;
+            letter-spacing: 0.04em;
             text-transform: uppercase;
-            color: #0a0a0a;
-            white-space: nowrap;
+            font-weight: 750;
+            color: #0f172a;
         }
         .print-row strong {
-            font-size: 1.35rem;
+            font-size: 1.25rem;
             font-weight: 800;
             color: #0f172a;
-            text-align: right;
-            line-height: 1.35;
-            flex: 1;
-        }
-        .print-prontuario-leito {
-            justify-content: flex-start;
-            align-items: center;
-            gap: 18px;
-        }
-        .print-inline-field {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-        .print-inline-field span {
-            margin: 0;
-        }
-        .print-inline-field strong {
-            flex: initial;
-            min-width: 64px;
             text-align: left;
+            line-height: 1.35;
         }
         .print-ticket-footer {
             display: grid;
@@ -2080,12 +2086,13 @@
             letter-spacing: 0.06em;
             color: #0a0a0a;
             display: block;
+            font-weight: 750;
         }
         .print-meta strong {
             display: block;
             margin-top: 4px;
-            font-size: 1.35rem;
-            font-weight: 800;
+            font-size: 1.3rem;
+            font-weight: 850;
         }
         .print-actions {
             justify-content: center;
