--- a/style.html
+++ b/style.html
@@ -1965,6 +1965,10 @@
             text-transform: uppercase;
             font-size: 0.98rem;
         }
+        #impressao-reserva-titulo {
+            align-self: flex-end;
+            text-align: right;
+        }
         .print-ticket-body {
             display: flex;
             flex-direction: column;
@@ -2025,7 +2029,7 @@
             font-weight: 750;
         }
         .print-armario-large {
-            font-size: 4.75rem;
+            font-size: 8rem;
             font-weight: 900;
             letter-spacing: 0.12em;
             color: #fff;
@@ -2033,7 +2037,7 @@
             line-height: 1.05;
         }
         .print-paciente-large {
-            font-size: 2.8rem;
+            font-size: 3.5rem;
             font-weight: 850;
             color: #0f172a;
             text-align: left;
@@ -2043,6 +2047,7 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
+            font-size: 1.5rem;
         }
         .print-row {
             display: grid;
