Adjust print ticket layout

--- a/index.html
+++ b/index.html
@@ -1046,20 +1046,22 @@
                             </div>
                             <div class="print-section-rows">
                                 <div class="print-row">
-                                    <span class="print-row-label">Leito</span>
-                                    <strong id="print-leito">-</strong>
-                                </div>
-                                <div class="print-row">
-                                    <span class="print-row-label">Prontuário</span>
-                                    <strong id="print-prontuario">-</strong>
-                                </div>
-                                <div class="print-row">
                                     <span class="print-row-label">Acompanhante</span>
                                     <strong id="print-acompanhante">-</strong>
                                 </div>
-                                <div class="print-row">
-                                    <span class="print-row-label">Volume(s)</span>
-                                    <strong id="print-volumes">-</strong>
+                                <div class="print-row-group">
+                                    <div class="print-row">
+                                        <span class="print-row-label">Prontuário</span>
+                                        <strong id="print-prontuario">-</strong>
+                                    </div>
+                                    <div class="print-row">
+                                        <span class="print-row-label">Leito</span>
+                                        <strong id="print-leito">-</strong>
+                                    </div>
+                                    <div class="print-row">
+                                        <span class="print-row-label">Volume(s)</span>
+                                        <strong id="print-volumes">-</strong>
+                                    </div>
                                 </div>
                             </div>
                         </div>
