--- a/style.html
+++ b/style.html
@@ -1915,8 +1915,8 @@
             display: none;
         }
         .print-ticket {
-            width: min(100%, 1200px);
-            max-width: 1200px;
+            width: min(100%, 880px);
+            max-width: 880px;
             min-width: 0;
             background: #ffffff;
             border-radius: 16px;
@@ -1966,8 +1966,8 @@
             font-size: 0.98rem;
         }
         #impressao-reserva-titulo {
-            align-self: flex-end;
-            text-align: right;
+            align-self: center;
+            text-align: center;
         }
         .print-ticket-body {
             display: flex;
@@ -1983,6 +1983,7 @@
             display: flex;
             flex-direction: column;
             gap: 12px;
+            font-size: 1.3rem;
         }
         .print-section:nth-of-type(2) {
             background: #eef2ff;
@@ -2048,6 +2049,11 @@
             flex-direction: column;
             gap: 10px;
             font-size: 1.5rem;
+        }
+        .print-row-group {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+            gap: 10px;
         }
         .print-row {
             display: grid;
