--- a/style.html
+++ b/style.html
@@ -2012,8 +2012,9 @@
             gap: 6px;
             padding: 10px 12px;
             border-radius: 10px;
-            border: 1px dashed #cbd5e1;
-            background: #fff;
+            border: 1px dashed #0f172a;
+            background: #0f172a;
+            color: #fff;
         }
         .print-field-armario {
             border-color: #0f172a;
@@ -2028,9 +2029,10 @@
             letter-spacing: 0.07em;
             text-transform: uppercase;
             font-weight: 750;
+            color: #fff;
         }
         .print-armario-large {
-            font-size: 8rem;
+            font-size: 9.5rem;
             font-weight: 900;
             letter-spacing: 0.12em;
             color: #fff;
@@ -2040,7 +2042,7 @@
         .print-paciente-large {
             font-size: 3.5rem;
             font-weight: 850;
-            color: #0f172a;
+            color: #fff;
             text-align: left;
             line-height: 1.2;
         }
@@ -2061,23 +2063,27 @@
             align-items: center;
             gap: 10px;
             padding: 8px 10px;
-            background: #fff;
+            background: #0f172a;
             border-radius: 8px;
-            border: 1px dashed #d5dbe6;
+            border: 1px dashed #0f172a;
         }
         .print-row-label {
             font-size: 1rem;
             letter-spacing: 0.04em;
             text-transform: uppercase;
             font-weight: 750;
-            color: #0f172a;
+            color: #fff;
         }
         .print-row strong {
-            font-size: 1.25rem;
+            display: block;
+            font-size: 1.5rem;
             font-weight: 800;
-            color: #0f172a;
+            color: #fff;
             text-align: left;
             line-height: 1.35;
+            word-break: break-word;
+            overflow-wrap: anywhere;
+            max-width: 100%;
         }
         .print-ticket-footer {
             display: grid;
